syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcDemo.Api.Proto";

package Accounts;

service AccountService {
	rpc Create (CreateAccountRequest) returns (google.protobuf.Empty);
	rpc ChangePassword (ChangePasswordRequest) returns (google.protobuf.Empty);
	rpc Login (LoginRequest) returns (LoginResponse);
}

message CreateAccountRequest {
	string name = 1;
	string email = 2;
	string password = 3;
}

message ChangePasswordRequest {
	string email = 1;
	string password = 2;
	string passwordConfirmation = 3;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string access_token = 1;
	google.protobuf.Timestamp expiration_date = 2;
}